testdata/baselines/reference/submodule/conformance/constructorTagOnNestedBinaryExpression.errors.txt
constructorTagOnNestedBinaryExpression.js(3,1): error TS2304: Cannot find name 'a'.
constructorTagOnNestedBinaryExpression.js(3,5): error TS2304: Cannot find name 'b'.


==== constructorTagOnNestedBinaryExpression.js (2 errors) ====
    // Fixes #35021
    /** @constructor */
    a = b = function c () {
    ~
!!! error TS2304: Cannot find name 'a'.
        ~
!!! error TS2304: Cannot find name 'b'.
        console.log(this)
    };
    